--- a/Code/SynergyNode/SynergyNode.csproj
+++ b/Code/SynergyNode/SynergyNode.csproj
@@ -36,6 +36,8 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -49,6 +51,13 @@
     <Compile Include="Device.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="MemmoryBin.cs" />
+    <Compile Include="NetworkObject.cs" />
+    <Compile Include="NetworkView.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="NetworkView.Designer.cs">
+      <DependentUpon>NetworkView.cs</DependentUpon>
+    </Compile>
     <Compile Include="RemoteNetworkNode.cs" />
     <Compile Include="TCPConnection.cs" />
     <Compile Include="Connection.cs" />
@@ -56,6 +65,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TCPListener.cs" />
     <Compile Include="Utilities.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="NetworkView.resx">
+      <DependentUpon>NetworkView.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
