--- a/trunk/Code/SynergyClient/SynergyClient.csproj
+++ b/trunk/Code/SynergyClient/SynergyClient.csproj
@@ -37,6 +37,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SynergyNode\bin\Debug\SynergyNode.dll</HintPath>
     </Reference>
+    <Reference Include="SynergyTemplate, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Synergy\SynergyTemplate\bin\Release\SynergyTemplate.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -55,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionList.cs" />
+    <Compile Include="NetworkNodeObject.cs" />
     <Compile Include="DeviceControls\NetworkDeviceDigitalOptions.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +74,7 @@
     <Compile Include="DeviceControls\NetworkDeviceAnalogOptions.Designer.cs">
       <DependentUpon>NetworkDeviceAnalogOptions.cs</DependentUpon>
     </Compile>
+    <Compile Include="DeviceControls\RoenyFont.cs" />
     <Compile Include="NetworkDeviceObject.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -84,6 +90,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DeviceControls\NetworkDeviceAnalogOptions.resx">
+      <DependentUpon>NetworkDeviceAnalogOptions.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
