--- a/trunk/Code/Framework/Framework.csproj
+++ b/trunk/Code/Framework/Framework.csproj
@@ -50,11 +50,13 @@
     <Compile Include="ByteStream.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="Converter.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="NetworkNodeLocal.cs" />
     <Compile Include="NetworkClass.cs" />
     <Compile Include="NetworkManager.cs" />
     <Compile Include="NetworkNode.cs" />
     <Compile Include="NetworkNodeRemote.cs" />
+    <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TCPClient.cs" />
     <Compile Include="TCPListener.cs" />
