--- a/Code/Framework/Framework.csproj
+++ b/Code/Framework/Framework.csproj
@@ -50,8 +50,8 @@
     <Compile Include="ByteStream.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="Converter.cs" />
-    <Compile Include="CrossThreadEvent.cs" />
     <Compile Include="Log.cs" />
+    <Compile Include="NetworkClassRemote.cs" />
     <Compile Include="NetworkNodeLocal.cs" />
     <Compile Include="NetworkClass.cs" />
     <Compile Include="NetworkManager.cs" />
