--- a/trunk/Code/FrontEnd/FrontEnd.csproj
+++ b/trunk/Code/FrontEnd/FrontEnd.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{AF488545-87A9-4314-AC42-2D2BD20BC581}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrontEnd.resx">
       <DependentUpon>FrontEnd.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -82,6 +83,10 @@
     <ProjectReference Include="..\Framework\Framework.csproj">
       <Project>{7F7862F6-190D-4B91-9F0D-6526A90B473D}</Project>
       <Name>Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Template\SynergyTemplate.csproj">
+      <Project>{234303EE-2883-407A-BEA6-47EC1501C788}</Project>
+      <Name>SynergyTemplate</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
