--- a/Code/Framework/Framework.csproj
+++ b/Code/Framework/Framework.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{7F7862F6-190D-4B91-9F0D-6526A90B473D}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -50,7 +50,6 @@
     <Compile Include="ByteStream.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="Converter.cs" />
-    <Compile Include="Log.cs" />
     <Compile Include="NetworkClassRemote.cs" />
     <Compile Include="NetworkNodeLocal.cs" />
     <Compile Include="NetworkClass.cs" />
@@ -61,6 +60,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TCPClient.cs" />
     <Compile Include="TCPListener.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Template\SynergyTemplate.csproj">
+      <Project>{234303EE-2883-407A-BEA6-47EC1501C788}</Project>
+      <Name>SynergyTemplate</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
