--- a/trunk/Code/Graphics/SynergyGraphics.csproj
+++ b/trunk/Code/Graphics/SynergyGraphics.csproj
@@ -37,6 +37,7 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -50,6 +51,7 @@
     <Compile Include="Graphics.cs" />
     <Compile Include="ImageGPU.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderTarget.cs" />
     <Compile Include="Shader.cs" />
   </ItemGroup>
   <ItemGroup>
