--- a/trunk/Code/Template/SynergyTemplate.csproj
+++ b/trunk/Code/Template/SynergyTemplate.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rectangle.cs" />
     <Compile Include="Vector.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
