--- a/Code/Template/SynergyTemplate.csproj
+++ b/Code/Template/SynergyTemplate.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Log.cs" />
+    <Compile Include="Matrix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rectangle.cs" />
     <Compile Include="SafeInvoke.cs" />
