--- a/trunk/Code/Hardware/BaseFrontEnd/BaseFrontEnd.csproj
+++ b/trunk/Code/Hardware/BaseFrontEnd/BaseFrontEnd.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BaseFrontEnd</RootNamespace>
     <AssemblyName>BaseFrontEnd</AssemblyName>
-    <TargetFrameworkVersion>v3.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <StartupObject>
     </StartupObject>
@@ -34,16 +34,34 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base.cs" />
     <Compile Include="Code.cs" />
     <Compile Include="CodeBlocks.cs" />
+    <Compile Include="f_AddEvent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_AddEvent.Designer.cs">
+      <DependentUpon>f_AddEvent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="f_Connect.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_Connect.Designer.cs">
+      <DependentUpon>f_Connect.cs</DependentUpon>
+    </Compile>
     <Compile Include="KismetEditor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,6 +71,12 @@
     <Compile Include="KismetSequence.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="f_AddEvent.resx">
+      <DependentUpon>f_AddEvent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_Connect.resx">
+      <DependentUpon>f_Connect.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="KismetEditor.resx">
       <DependentUpon>KismetEditor.cs</DependentUpon>
     </EmbeddedResource>
@@ -60,6 +84,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SequenceEditWindow.resx">
+      <DependentUpon>SequenceEditWindow.cs</DependentUpon>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -73,6 +100,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="SequenceEditWindow.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SequenceEditWindow.Designer.cs">
+      <DependentUpon>SequenceEditWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Utilities.cs" />
   </ItemGroup>
