--- a/Code/Framework/Framework.csproj
+++ b/Code/Framework/Framework.csproj
@@ -70,6 +70,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ByteStream.cs" />
+    <Compile Include="ExecFunctions.cs" />
+    <Compile Include="FrontEnd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrontEnd.Designer.cs">
+      <DependentUpon>FrontEnd.cs</DependentUpon>
+    </Compile>
     <Compile Include="NetworkClassSlaveDefault.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="Converter.cs" />
@@ -82,6 +89,11 @@
     <Compile Include="NetworkNodeRemote.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="TCPClient.cs" />
     <Compile Include="TCPListener.cs" />
   </ItemGroup>
@@ -90,9 +102,6 @@
       <Project>{234303EE-2883-407A-BEA6-47EC1501C788}</Project>
       <Name>SynergyTemplate</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -115,6 +124,21 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="FrontEnd.resx">
+      <DependentUpon>FrontEnd.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
