--- a/Code/WebServer/WebServer.csproj
+++ b/Code/WebServer/WebServer.csproj
@@ -46,8 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interface3.cs" />
     <Compile Include="Interface1.cs" />
     <Compile Include="Interface2.cs" />
+    <Compile Include="K8055.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scene.cs" />
