--- a/Code/WebInterface/WebInterface.csproj
+++ b/Code/WebInterface/WebInterface.csproj
@@ -52,6 +52,18 @@
     <Compile Include="Control.cs" />
     <Compile Include="Scene.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SceneEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SceneEditor.Designer.cs">
+      <DependentUpon>SceneEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SceneEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SceneEditorForm.Designer.cs">
+      <DependentUpon>SceneEditorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="URLParser.cs" />
     <Compile Include="WebInterface.cs" />
   </ItemGroup>
@@ -64,6 +76,17 @@
       <Project>{80813922-BFA7-41DC-9DC0-2E86A0AB59F9}</Project>
       <Name>SynergySequence</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SceneEditor.resx">
+      <DependentUpon>SceneEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SceneEditorForm.resx">
+      <DependentUpon>SceneEditorForm.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
